--- a/index.html
+++ b/index.html
@@ -1,174 +1,5 @@
-<html xmlns:v="urn:schemas-microsoft-com:vml"
-xmlns:o="urn:schemas-microsoft-com:office:office"
-xmlns:dt="uuid:C2F41010-65B3-11d1-A29F-00AA00C14882"
-xmlns="http://www.w3.org/TR/REC-html40">
-
-<head>
-<meta http-equiv=Content-Type content="text/html; charset=windows-1252">
-<link rel=File-List href="index_files/filelist.xml">
-<!--[if !mso]>
-<style>
-v\:* {behavior:url(#default#VML);}
-o\:* {behavior:url(#default#VML);}
-b\:* {behavior:url(#default#VML);}
-.shape {behavior:url(#default#VML);}
-</style>
-<![endif]-->
-<title>Page Title</title>
-<style>
-<!--
- /* Style Definitions */
-ol
-	{margin-top:0in;
-	margin-bottom:0in;
-	margin-left:-2197in;}
-ul
-	{margin-top:0in;
-	margin-bottom:0in;
-	margin-left:-2197in;}
-@page
-	{size:8.0302in 11.0in;}
--->
-</style>
-<!--[if gte mso 9]><xml>
- <o:shapedefaults v:ext="edit" spidmax="3075" fill="f" fillcolor="white [7]"
-  strokecolor="black [0]">
-  <v:fill color="white [7]" color2="white [7]" on="f"/>
-  <v:stroke color="black [0]" color2="white [7]" weight="2pt">
-   <o:left v:ext="view" color="black [0]" color2="white [7]"/>
-   <o:top v:ext="view" color="black [0]" color2="white [7]"/>
-   <o:right v:ext="view" color="black [0]" color2="white [7]"/>
-   <o:bottom v:ext="view" color="black [0]" color2="white [7]"/>
-   <o:column v:ext="view" color="black [0]" color2="white [7]"/>
-  </v:stroke>
-  <v:shadow color="#ccc [4]"/>
-  <o:extrusion v:ext="view" backdepth="0" viewpoint="0,0" viewpointorigin="0,0"/>
-  <v:textbox inset="2.88pt,2.88pt,2.88pt,2.88pt"/>
-  <o:colormenu v:ext="edit" fillcolor="#99f" strokecolor="black [0]"
-   shadowcolor="#ccc [4]"/>
- </o:shapedefaults><o:shapelayout v:ext="edit">
-  <o:idmap v:ext="edit" data="1"/>
- </o:shapelayout></xml><![endif]-->
-</head>
-
-<body style='margin:0'>
-
-<div style='position:absolute;width:8.0459in;height:4.1067in'>
-<!--[if gte vml 1]><v:rect id="_x0000_s1025" style='position:absolute;left:54.47pt;
- top:58.42pt;width:236.14pt;height:236.14pt;z-index:1;mso-wrap-distance-left:2.88pt;
- mso-wrap-distance-top:2.88pt;mso-wrap-distance-right:2.88pt;
- mso-wrap-distance-bottom:2.88pt' o:preferrelative="t" filled="f" fillcolor="white [7]"
- stroked="f" strokecolor="black [0]" strokeweight="2pt" o:cliptowrap="t">
- <v:fill color2="white [7]"/>
- <v:stroke color2="white [7]">
-  <o:left v:ext="view" color="black [0]" color2="white [7]"/>
-  <o:top v:ext="view" color="black [0]" color2="white [7]"/>
-  <o:right v:ext="view" color="black [0]" color2="white [7]"/>
-  <o:bottom v:ext="view" color="black [0]" color2="white [7]"/>
-  <o:column v:ext="view" color="black [0]" color2="white [7]"/>
- </v:stroke>
- <v:imagedata src="index_files/image293.jpg" o:title="cborel"/>
- <v:shadow color="#ccc [4]"/>
- <o:extrusion v:ext="view" backdepth="0" viewpoint="0,0" viewpointorigin="0,0"/>
- <o:lock v:ext="edit" aspectratio="t"/>
-</v:rect><![endif]--><![if !vml]><span style='position:absolute;z-index:1;
-left:70px;top:75px;width:320px;height:320px'><img width=320 height=320
-src="index_files/image293.jpg" v:shapes="_x0000_s1025"></span><![endif]><!--[if gte vml 1]><v:roundrect
- id="_x0000_s1028" style='position:absolute;left:302.92pt;top:1in;width:269.56pt;
- height:181.54pt;z-index:2;mso-wrap-distance-left:2.88pt;
- mso-wrap-distance-top:2.88pt;mso-wrap-distance-right:2.88pt;
- mso-wrap-distance-bottom:2.88pt' arcsize="10923f" fillcolor="#99f [1 lighten(102)]"
- strokecolor="black [0]" strokeweight="2pt" o:cliptowrap="t">
- <v:fill color2="white [7]"/>
- <v:stroke color2="white [7]">
-  <o:left v:ext="view" color="black [0]" color2="white [7]"/>
-  <o:top v:ext="view" color="black [0]" color2="white [7]"/>
-  <o:right v:ext="view" color="black [0]" color2="white [7]"/>
-  <o:bottom v:ext="view" color="black [0]" color2="white [7]"/>
-  <o:column v:ext="view" color="black [0]" color2="white [7]"/>
- </v:stroke>
- <v:shadow color="#ccc [4]"/>
- <o:extrusion v:ext="view" backdepth="0" viewpoint="0,0" viewpointorigin="0,0"/>
- <v:textbox inset="2.88pt,2.88pt,2.88pt,2.88pt"/>
-</v:roundrect><![endif]--><![if !vml]><span style='position:absolute;
-z-index:2;left:400px;top:92px;width:367px;height:250px'><img width=367
-height=250 src="index_files/image297.png" v:shapes="_x0000_s1028"></span><![endif]><!--[if gte vml 1]><v:shapetype
- id="_x0000_t174" coordsize="21600,21600" o:spt="174" adj="18514" path="m0@1qy10800,,21600@1m,21600qy10800@0,21600,21600e">
- <v:formulas>
-  <v:f eqn="val #0"/>
-  <v:f eqn="sum 21600 0 #0"/>
-  <v:f eqn="prod @1 1 2"/>
-  <v:f eqn="sum @2 10800 0"/>
- </v:formulas>
- <v:path textpathok="t" o:connecttype="custom" o:connectlocs="10800,0;0,@3;10800,@0;21600,@3"
-  o:connectangles="270,180,90,0"/>
- <v:textpath on="t" fitshape="t"/>
- <v:handles>
-  <v:h position="center,#0" yrange="14400,21600"/>
- </v:handles>
- <o:lock v:ext="edit" text="t" shapetype="t"/>
-</v:shapetype><v:shape id="_x0000_s1026" type="#_x0000_t174" style='position:absolute;
- left:310.5pt;top:85.27pt;width:248.25pt;height:59.5pt;z-index:3;
- mso-wrap-distance-left:2.88pt;mso-wrap-distance-top:2.88pt;
- mso-wrap-distance-right:2.88pt;mso-wrap-distance-bottom:2.88pt' fillcolor="#e5b8b7"
- strokecolor="#c0504d" strokeweight="1.15pt" o:cliptowrap="t">
- <v:fill src="index_files/image295.jpg" o:title="" color2="fill lighten(79)"
-  method="linear sigma" type="gradient"/>
- <v:stroke src="index_files/image295.jpg" o:title="">
-  <o:left v:ext="view" color="black [0]" color2="white [7]"/>
-  <o:top v:ext="view" color="black [0]" color2="white [7]"/>
-  <o:right v:ext="view" color="black [0]" color2="white [7]"/>
-  <o:bottom v:ext="view" color="black [0]" color2="white [7]"/>
-  <o:column v:ext="view" color="black [0]" color2="white [7]"/>
- </v:stroke>
- <v:shadow on="t" color="#7f7f7f" opacity=".5" offset="-1pt,.74833mm"
-  offset2="-6pt"/>
- <v:textpath style='font-family:"Arial Black";font-weight:bold;v-text-kern:t'
-  trim="t" fitpath="t" string="Chris Borel's"/>
- <v:handles>
-  <v:h position="#0,bottomRight" xrange="6629,14971"/>
- </v:handles>
-</v:shape><![endif]--><![if !vml]><span style='position:absolute;z-index:3;
-left:409px;top:111px;width:339px;height:82px'><img width=339 height=82
-src="index_files/image2951.png" alt="Chris Borel's" v:shapes="_x0000_s1026"></span><![endif]><!--[if gte vml 1]><v:shapetype
- id="_x0000_t175" coordsize="21600,21600" o:spt="175" adj="3086" path="m,qy10800@0,21600,m0@1qy10800,21600,21600@1e">
- <v:formulas>
-  <v:f eqn="val #0"/>
-  <v:f eqn="sum 21600 0 #0"/>
-  <v:f eqn="prod @1 1 2"/>
-  <v:f eqn="sum @2 10800 0"/>
- </v:formulas>
- <v:path textpathok="t" o:connecttype="custom" o:connectlocs="10800,@0;0,@2;10800,21600;21600,@2"
-  o:connectangles="270,180,90,0"/>
- <v:textpath on="t" fitshape="t"/>
- <v:handles>
-  <v:h position="center,#0" yrange="0,7200"/>
- </v:handles>
- <o:lock v:ext="edit" text="t" shapetype="t"/>
-</v:shapetype><v:shape id="_x0000_s1027" type="#_x0000_t175" style='position:absolute;
- left:311.38pt;top:159.36pt;width:248.25pt;height:94.18pt;z-index:4;
- mso-wrap-distance-left:2.88pt;mso-wrap-distance-top:2.88pt;
- mso-wrap-distance-right:2.88pt;mso-wrap-distance-bottom:2.88pt' fillcolor="#ffc299 [3 lighten(102)]"
- strokecolor="#4f81bd" strokeweight="1.2pt" o:cliptowrap="t">
- <v:stroke src="index_files/image295.jpg" o:title="">
-  <o:left v:ext="view" color="black [0]" color2="white [7]"/>
-  <o:top v:ext="view" color="black [0]" color2="white [7]"/>
-  <o:right v:ext="view" color="black [0]" color2="white [7]"/>
-  <o:bottom v:ext="view" color="black [0]" color2="white [7]"/>
-  <o:column v:ext="view" color="black [0]" color2="white [7]"/>
- </v:stroke>
- <v:shadow on="t" color="#bfbfbf" opacity="49151f" offset="1pt,.74833mm"
-  offset2="-2pt"/>
- <v:textpath style='font-family:"Arial Black";v-text-kern:t' trim="t"
-  fitpath="t" string="Papers &amp; Talks"/>
- <v:handles>
-  <v:h position="#0,bottomRight" xrange="6629,14971"/>
- </v:handles>
-</v:shape><![endif]--><![if !vml]><span style='position:absolute;z-index:4;
-left:412px;top:210px;width:339px;height:125px'><img width=339 height=125
-src="index_files/image296.png" alt="Papers &amp; Talks" v:shapes="_x0000_s1027"></span><![endif]>
-</div>
-
-</body>
-
+<html>
+	<body>
+	<h1> Borel's papers </h1>
+	</body>
 </html>
